add double angle quotes for list elements

--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
                     <dl>
                         <dt>Objectives</dt>
                         {{#each objectives}}
-                        <dd>{{{this}}}</dd>
+                        <dd>&#187; {{{this}}}</dd>
                         {{else}}
                         {{/each}}
                     </dl>
                     <dl>
                         <dt>Links</dt>
                         {{#each links}}
-                        <dd>{{{this}}}</dd>
+                        <dd>&#187; {{{this}}}</dd>
                         {{else}}
                         {{/each}}
                     </dl>
