remove angle bullet from objective list.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <dl>
                         <dt>Objectives</dt>
                         {{#each objectives}}
-                        <dd>&#187; {{{this}}}</dd>
+                        <dd>{{{this}}}</dd>
                         {{else}}
                         {{/each}}
                     </dl>
