--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
                 <div class="col-sm-8 col-md-7 border">
                     <h4>{{title}}</h4>
                     <p>{{{description}}}</p>
-                    <dl>
+                    <ul>
                         <dt>Objectives</dt>
                         {{#each objectives}}
-                        <dd>{{{this}}}</dd>
+                        <li>{{{this}}}</li>
                         {{else}}
                         {{/each}}
-                    </dl>
+                    </ul>
                     <dl>
                         <dt>Links</dt>
                         {{#each links}}
